--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -99,7 +99,7 @@ if ($this->countDownloadsOverall > 0) {
         <div class="col-md-1"></div>
         <div class="col-md-5 text-left text-uppercase"><strong>Products</strong></div>
         <div class="col-md-2 text-right text-uppercase"><strong>Downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Downloads" data-trigger="hover" data-html="true" data-content="Sum of all downloads of all files of this product within this month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
-        <div class="col-md-2 text-right text-uppercase"><strong>Pling-Factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Pling-Factor" data-trigger="hover" data-html="true" data-content="The Pling-Factor's base is cent and depends on the product category.<br>A factor of 1 means 1 download = 1 cent."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-2 text-right text-uppercase"><strong>Pling-Factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Pling-Factor" data-trigger="hover" data-html="true" data-content="The Pling-Factor's base is $-cent and depends on the product category.<br>A factor of '1' means:<br>1 Download equals 1 $-cent."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <!--<div class="col-md-2 text-right text-uppercase"><strong>plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="plings" data-trigger="hover" data-html="true" data-content="You can collect new plings every month. The number of plings results from the pling factor. At the beginning of each month you will be paid the plings of the previous month to your PayPal account. Where: <b>1 pling = $0.01</b>.<br>A valid PayPal address must be maintained in your settings and the payout amount must be at least one dollar. If you do not meet these requirements, we can not pay you anything. We will check these requirements every month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>-->
         <div class="col-md-2 text-right text-uppercase"><strong>Earned</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="payout" data-trigger="hover" data-html="true" data-content="The payout amount results from the Pling-Factor of each product, where the result in $-cent is the number of downloads multiplied by the Pling-Factor."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
     </div>
@@ -149,7 +149,7 @@ if ($this->countDownloadsOverall > 0) {
                 </div>
                 <?php
                 $sum_total_month += $product['num_downloads'] * $product['dl_pling_factor'];
-                $sum_total_text = 'Possible payment amount for this month (<span style="font-size: smaller;">*</span>):';
+                $sum_total_text = 'Possible payout for this month (<span style="font-size: smaller;">*</span>):';
                 $sum_total_payout = $currency->toCurrency($sum_total_month/100);
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_COMPLETED) {
                     $sum_total_payout = $currency->toCurrency($product['amount']);
@@ -197,7 +197,7 @@ if ($this->countDownloadsOverall > 0) {
     echo '<div class="tab-pane fade in active" id="'.$printDate.'">';
     echo '    <div style="text-align: center;" class="row margin-bottom-12"><div class="col-md-12 cell-default">No Data</div></div>';
     echo '    <div class="row row-total">';
-    echo '        <div class="col-md-11 text-right">Possible payment amount for this month (<span style="font-size: smaller;">*</span>):</div><div class="col-md-1 text-right"><strong>$0.00</strong></div>';
+    echo '        <div class="col-md-11 text-right">Possible payout for this month (<span style="font-size: smaller;">*</span>):</div><div class="col-md-1 text-right"><strong>$0.00</strong></div>';
     echo '    </div>';
     echo '</div>';
 }
@@ -211,8 +211,15 @@ if ($this->countDownloadsOverall > 0) {
         <p>This payout service is completely voluntarily. It is within Hive01's full rights to decide at any time:</p>
         <p>a) when and</p>
         <p>b) how much of the shown calculated amount is to be paid or</p>
-        <p>c) to cancel partly or complete payment without giving any reasons.</p>
-        <p><br>A valid PayPal address must be maintained in your settings at the time of the payout. The total payout amount for a completed month must be at least one dollar. Lesser amounts will not be paid out and can not be transferred to the next month. If you do not meet these requirements, we can not pay you out anything that month. Non-paid-out months can not be retroactively will not be paid out in the future. We will check these requirements every month. If all requirements were met and we have no reasons to decide otherwise you will be receiving the payout amount to your PayPal account within the following month.</p>
+        <p>c) to cancel partly or complete payment without giving any reasons (reasons are most likely cheating or inflating download numbers).</p>
+        <p>d) Any PLING-FACTOR can be changed at any time and any rate (even to "0") to adjust the payout amount for products, even for a previous still to-be-paid-out pending month as long as it has not been paid out yet.</p>
+        <p><br>A valid PayPal address must be maintained in your settings at the time of the payout. 
+            The total payout amount for a completed month must be at least one dollar. 
+            Lesser amounts will not be paid out and can not be transferred to the next month. 
+            If you do not meet these requirements, we can not pay you out anything that month. 
+            Non-paid-out months will not be retroactively paid out in the future.
+            We will check these requirements every month. 
+            If all requirements were met and we have no reasons to decide otherwise you will be receiving the payout amount to your PayPal account within the following month.</p>
             
     </div>
 </div>
