--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -174,6 +174,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                        <?php } ?>
                                         <li><a href="#files-panel" data-toggle="tab">Files <?php  if($productFileInfos['fileCount']>0) {echo '('.$productFileInfos['fileCount'].')'; } ?></a></li>
                                        <li><a href="#donations-panel" data-toggle="tab">Supporters <?php if(count($this->supporting)>0) { echo '('.count($this->supporting).')';} ?></a></li>
+                                       <li><a href="#updates-panel" data-toggle="tab">Changelogs <?php if(count($this->updates)>0) { echo '('.count($this->updates).')';} ?></a></li>
                                         
                                    </ul>
                                </div>
@@ -199,8 +200,10 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 
                                                <article>
                                                    <?php if (count($this->updates) > 0) { ?>
-                                                    <br /><b>Changelog:</b> <br /><br />
-                                                       <?= $this->partialLoop('product/partials/productUpdates.phtml', $this->updates); ?>
+                                                    <br /><b>Last changelog:</b> <br /><br />
+                                                      
+                                                    <?= $this->partial('product/partials/productUpdates.phtml', $this->updates[0]); ?>
+                                                       
                                                    <?php } ?>
                                                </article>
                                                
@@ -292,6 +295,16 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                        <?php endif; ?>                                      
                                    </div>
                                    <!-- /MEDIA -->
+
+                                   <!-- updates panel -->
+                                   <div class="tab-pane" id="updates-panel">
+                                      <article>                                      
+                                          <?php if (count($this->updates) > 0) { ?>
+                                           <br /><b>Changelog:</b> <br /><br />
+                                              <?= $this->partialLoop('product/partials/productUpdates.phtml', $this->updates); ?>
+                                          <?php } ?>
+                                      </article>                             
+                                   </div>
     
                                   <div class="tab-pane" id="files-panel">
                                     <div class="col-lg-12">
