--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -396,16 +396,16 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 
                               <?php echo $this->render('partials/sidebarRating.phtml'); ?>
 
+                            <?php /* 
                               <div class="row">
                                   <div class="prod-info">      
-                                  <?php /*                                                                                        
+                                                                                                                         
                                     <?php if ($this->product->ppload_collection_id): ?>  
                                        <div class="prod-download"> 
                                       <a href="#" onclick="return activeTabFiles();"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> <div class="txt"><span>download</span></div></a>
                                       </div>
                                     <?php endif;  ?>
-                                   */
-                                    ?>
+                                  
                                     <?php if (!empty($this->product->paypal_mail)) : ?>
                                       <div class="prod-download">  
                                         <a id="inline" href="#product-donate"><div class="txt"><span>Donate</span></div></a>
@@ -418,7 +418,9 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                     <?php endif; ?> 
                                   </div>   
                               </div>
-                              
+                               */
+                                    ?>
+
                                   <!-- MORE PRODUCTS -->
                                   
                                   <div>
@@ -441,8 +443,8 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                           )); ?>
                                   </div>
                                   <!-- /MORE PRODUCTS -->
-
-                                  <?php
+  
+                                  <?php /*
                                   echo $this->partial(
                                       $viewSidebar,
                                       array(
@@ -459,7 +461,10 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                           'paymentMessage' => $this->paymentMessage
                                       )
                                   );
+                                  */
                                   ?>
+
+                               <?php echo $this->render('partials/sidebarCcLicense.phtml'); ?>
 
                                <?php                                      
                                         echo $this->render('product/partials/details.phtml');
