--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -55,6 +55,8 @@
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+    
+    
 </head>
 <body>
 <?php echo $this->render('partials/header/template.phtml'); ?>
@@ -106,7 +108,7 @@
 <script src="/theme/flatui/js/lib/additional-methods.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.steps.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-
+<script src="/theme/backend/js/jquery.cookie.js"></script>
 <script src="/tools/md5.js"></script>
 <script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script>
 
