--- a/application/modules/default/views/scripts/explore/partials/productTop.phtml
+++ b/application/modules/default/views/scripts/explore/partials/productTop.phtml
@@ -35,15 +35,17 @@
             </a>
         </figure>
     </div>
-    <div class="explore-product-details col-lg-7 col-md-7 col-sm-7 col-xs-7 nopaddingleftright" >
+    <div class="explore-product-details col-lg-9 col-md-9 col-sm-9 col-xs-9 nopaddingleftright" >
          <div style="line-height: 16px">
             <a href="<?= $this->buildProductUrl($this->product['project_id'], ''); ?>"><?php echo $this->product['title']; ?></a>           
             <span style="font-size: smaller;display: block"><?php echo $this->product['category_title']; ?></span>
         </div>               
     </div>
+    <?php /*
     <div class="explore-product-plings col-lg-2 col-md-2 col-sm-2 col-xs-2 nopaddingleftright" style="text-align: right">
         <div style="line-height: 25px">
         <?php echo $this->product['amount']; ?>
         </div>
     </div>
+    */ ?>
 </div><!-- END .explore-product -->
