--- a/application/modules/default/views/scripts/partials/searchResult.phtml
+++ b/application/modules/default/views/scripts/partials/searchResult.phtml
@@ -43,7 +43,7 @@ $plingMoney = $this->plingMoney($this->hits->project_id);
         </div>
         <div class="collected">
             <span class="count"><?= $this->toCurrency($this->count_amount) ?></span>
-            <span><? /*=$latestPling['age']?> <?=$latestPling['unit']*/ ?> ago</span>
+            <span><?php /*=$latestPling['age']?> <?=$latestPling['unit']*/ ?> ago</span>
         </div>
     </div>
 </div><!-- END .explore-product -->
