--- a/application/modules/default/views/scripts/partials/supporter.phtml
+++ b/application/modules/default/views/scripts/partials/supporter.phtml
@@ -44,7 +44,7 @@ if (($this->partialCounter<4 && $this->partialCounter  % 5 == 0) || ($this->part
             <!-- /.supporter-thumbnail -->
 
             <div class="supporter-details">
-                <h3 class="supporter-name?>"><?php echo $this->username; ?></h3>
+                <h3 class="<?php echo $this->supporter-name?>"><?php echo $this->username; ?></h3>
                 <?php if ($this->comment) { ?>
                     <div class="supporter-comment">
                         <?php echo $this->comment; ?>
