--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -33,8 +33,6 @@ if ($this->product->claimable == 1) {
     $viewClaimBox = 'product/partials/productClaimTopHeader.phtml';
 }
 
-
-
 $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 //$this->os = Zend_Registry::get('application_os');
 ?>
@@ -70,11 +68,10 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 </div>
 
 <main id="product-page-content">
-<div class="container-fluid" style="">
-  <div class="row">
-       <div class="col-lg-10 col-md-8 col-sm-8 col-xs-12 imgsmall" id="product-main">
-           <div class="row" id="product-main-img-container">
-              <div class="col-lg-12 product-main-img" id="product-main-img">                                          
+<div class="flex-column">
+       <div class="flex-item-20 " id="product-main" >
+           <div class="flex-row imgsmall" id="product-main-img-container">
+              <div class="product-main-img flex-item-24" id="product-main-img">                                          
                   <div  id="carouselContainer" class="carouselContainer">
                       <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">                                
                    
@@ -134,20 +131,14 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                         <div class="product-logo-container">
                           <img class="logo"  src="<?= $this->Image($this->product->image_small, array('width' => 85, 'height' => 85, 'crop' => 'crop'));?>"/>
                         </div>
-                        <span class="product_category">
-
-                        
-                        
-                        <?php                                            
-                        //if($this->catParentTitle && 'root'!=$this->catParentTitle) { echo '<a href="/browse/cat/'.$this->catParentId.'/order/latest">'.$this->catParentTitle.'</a>'; echo " / "; }
-                        //echo  '<a href="/browse/cat/'.$this->product->project_category_id.'/order/latest">'.$this->catTitle.'</a>'; 
+                        <span class="product_category">                                                
+                        <?php  
                         echo  '<a href="/browse/cat/'.$this->catId.'/order/latest">'.$this->catTitle. ' </a>';
-                        ?>
-                        
+                        ?>                        
                         </span>
                         <span class="light small">
                         <?php if (false === empty($this->product->github_code)):
-                        	echo '<a target="_blank" href="'.$this->product->github_code.'">'.$this->product->github_code.' <span class="fa fa-external-link"></span></a>';
+                          echo '<a target="_blank" href="'.$this->product->github_code.'">'.$this->product->github_code.' <span class="fa fa-external-link"></span></a>';
                             endif;
                         ?>
                         
@@ -157,7 +148,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
               </div>
            </div>
 
-                      <div class="col-lg-12" id="product-tabs-container">
+                      <div class="flex-item-24" id="product-tabs-container">
                                <!-- TABS -->
                                <div id="product-tabs">
                                    <ul class="nav nav-tabs">
@@ -172,8 +163,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                                </a>
                                            </li>
                                        <?php } ?>
-                                        <li><a href="#files-panel" data-toggle="tab">Files <?php  if($productFileInfos['fileCount']>0) {echo '('.$productFileInfos['fileCount'].')'; } ?></a></li>
-                                      <?php /* <li><a href="#donations-panel" data-toggle="tab">Supporters <?php if(count($this->supporting)>0) { echo '('.count($this->supporting).')';} ?></a></li> */ ?>
+                                        <li><a href="#files-panel" data-toggle="tab">Files <?php  if($productFileInfos['fileCount']>0) {echo '('.$productFileInfos['fileCount'].')'; } ?></a></li>                                    
                                        <li><a href="#updates-panel" data-toggle="tab">Changelogs <?php if(count($this->updates)>0) { echo '('.count($this->updates).')';} ?></a></li>
                                         
                                    </ul>
@@ -200,15 +190,13 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 
                                                <article>
                                                    <?php if (count($this->updates) > 0) { ?>
-                                                    <br /><b>Last changelog:</b> 
+                                                   <b>Last changelog:</b> 
                                                       
                                                     <?= $this->partial('product/partials/productUpdates.phtml', $this->updates[0]); ?>
                                                        
                                                    <?php } ?>
                                                </article>
                                                
-                                               
-                                               <?php //if ('development' != APPLICATION_ENV) { ?>
                                                <!-- comments -->
                                                <div id="product-discussion">
                                                    <?php echo $this->render('product/partials/productCommentsUX1.phtml',
@@ -218,8 +206,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                                            'member_id' => $this->authMember->member_id
                                                        )); ?>
                                                </div>
-                                               <!-- /comments -->
-                                               <?php //} ?>
+                                               <!-- /comments -->                                             
                                            </div>
 
                                        </div>
@@ -238,56 +225,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 
                                      
                                    </div>
-                                   <!-- /ABOUT -->
-
-                                   <?php /*
-                                   <div class="tab-pane" id="donations-panel">
-
-                                       <article class="col-lg-8 col-md-8 col-sm-8 col-xs-12" id="comments-container">
-
-                                         <h3>Supporters</h3>
-                                         <?php
-                                         if (count($this->supporting) > 0):
-                                             $countSupporter = count($this->supporting->toArray());
-                                             if ($countSupporter < 4) {
-                                                 $g = $countSupporter;
-                                             } else {
-                                                 $g = 4;
-                                             }
-                                             $h = 0;
-                                             $i = 3;
-                                             foreach ($this->supporting as $supporter):
-                                                 $i++;
-                                                 $h++; ?>
-
-                                                 <div class="user">
-                                                     <div class="u-wrap">
-                                                         <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($supporter->member_id); ?>">
-                                                             <figure>
-                                                                 <img src="<?= $helpImage->Image($supporter->profile_image_url,array('width' => 200, 'height' => 200, 'crop' => 2)); ?>" />
-                                                             </figure>
-                                                             <div class="u-content">
-                                                                 <h3><?= $supporter->username ?></h3>
-                                                                 <span>$<?= $supporter->sum_plings ?></span>
-                                                             </div>
-                                                         </a>
-                                                     </div>
-                                                 </div>
-
-                                                 <?php
-                                             endforeach;
-                                         endif;
-                                         ?>                                           
-                                       </article>
-
-
-                                       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 list panel-grey-part" id="supporters-product-detail-panel">
-                                          <?php echo $this->render('product/partials/productSupporterComments.phtml') ?>
-                                       </div>
-
-                                   </div>
-                                   */ ?>
-                                   <!-- /DONATIONS -->
+                                   <!-- /ABOUT -->                                 
 
                                    <!-- MEDIA -->
                                    <div class="tab-pane" id="media-panel">
@@ -308,16 +246,13 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
     
                                   <div class="tab-pane" id="files-panel">
                                     <div class="col-lg-12">
-                                    <?php 
-                                    //if($productFileInfos['fileCount'] >0)
-                                      //{ 
+                                    <?php                                    
                                           echo $this->partial(
                                           'product/partials/ppload.phtml',
                                                 array(            
                                                     "product" => $this->product           
                                                 )
-                                            );
-									  //}
+                                            );                   
                                       ?>
                                       </div>
                                   </div>
@@ -332,8 +267,8 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
 
 
        </div>
-       <div class="col-lg-2 col-md-4 col-sm-4 col-xs-12" id="product-maker">
-          <div class="row">
+       <div class="flex-item-4 flex-right" id="product-maker">
+          <div>
               <div class="project-share-new col-lg-12 col-md-12 col-sm-12 col-xs-12">
                           <script type="text/javascript">
                                   function fbs_click(a) {
@@ -395,31 +330,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                               <?php } ?>
 
                               <?php echo $this->render('partials/sidebarRating.phtml'); ?>
-
-                            <?php /* 
-                              <div class="row">
-                                  <div class="prod-info">      
-                                                                                                                         
-                                    <?php if ($this->product->ppload_collection_id): ?>  
-                                       <div class="prod-download"> 
-                                      <a href="#" onclick="return activeTabFiles();"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> <div class="txt"><span>download</span></div></a>
-                                      </div>
-                                    <?php endif;  ?>
-                                  
-                                    <?php if (!empty($this->product->paypal_mail)) : ?>
-                                      <div class="prod-download">  
-                                        <a id="inline" href="#product-donate"><div class="txt"><span>Donate</span></div></a>
-                                      </div>
-                                    <?php endif; ?>   
-                                    <?php if (!empty($this->product->member_id) && $helperUserIsOwner->userIsOwner($this->product->member_id)) : ?>
-                                      <div class="prod-download">  
-                                        <a id="inline" href="edit"><div class="txt"><span>Edit Product</span></div></a>
-                                      </div>
-                                    <?php endif; ?> 
-                                  </div>   
-                              </div>
-                               */
-                                    ?>
+                          
 
                                   <!-- MORE PRODUCTS -->
                                   
@@ -443,121 +354,25 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                           )); ?>
                                   </div>
                                   <!-- /MORE PRODUCTS -->
-  
-                                  <?php /*
-                                  echo $this->partial(
-                                      $viewSidebar,
-                                      array(
-                                          "member" => $this->member,
-                                          "product" => $this->product,
-                                          "loginUrl" => $loginUrl,
-                                          'product_views' => $this->product_views,
-                                          'tab' => 'product',
-                                          'supporter' => $this->supporter,
-                                          'supporting' => $this->supporting,
-                                          'plings' => $this->plings,
-                                          'moreProducts' => $this->more_products,
-                                          'paymentStatus' => $this->paymentStatus,
-                                          'paymentMessage' => $this->paymentMessage
-                                      )
-                                  );
-                                  */
-                                  ?>
+                                   
 
                                <?php echo $this->render('partials/sidebarCcLicense.phtml'); ?>
 
-                               <?php                                      
-                                        echo $this->render('product/partials/details.phtml');
-                                        ?>
+                               <?php echo $this->render('product/partials/details.phtml');?>
                                
                   </div>
               </div>
             
           </div>
-  </div> <!--end col-lg-2-->
+  
 </div>
 </main>
-
-    <div id="product-donate">
-    <?php
-//    echo $this->partial(
-//        'product/partials/productDonat.phtml',
-//        array(
-//            "member" => $this->member,
-//            "product" => $this->product,
-//            'urlPay' => $this->urlPay,
-//        )
-//    );
-    echo $this->render('product/partials/productDonat.phtml');
-    ?>
-    </div>
-
     
-    
-    <script>
-        $(document).ready(function () {
-
-
-            $("a#inline").fancybox({
-                'hideOnContentClick': true,
-                'autoScale': false,
-                'cyclic': 'true',
-                'transitionIn': 'elastic',
-                'transitionOut': 'elastic'
-            });
-
-
-            $('.carousel-inner img').each(function (index) {
-                $(this).on("click", function () {
-                    $("#product-main").toggleClass("col-lg-10");
-                    $("#product-main").toggleClass("col-lg-12");
-                    $("#product-main").toggleClass("imgfull");
-                    $("#product-main").toggleClass("imgsmall");
-                    $("#product-tabs-container").toggleClass("col-lg-10");
-                    $("#product-tabs-container").toggleClass("col-lg-12");
-                    $("#product-main-img-container").toggleClass("row");
-
-                    if ($("#product-main").hasClass("imgfull")) {
-                        var xtop = $("#product-tabs-container").position().top + 100;
-                        $("#product-maker").css({top: xtop, right: 0, position: 'absolute'});
-                    }
-                    else {
-                        $("#product-maker").css("position", "static");
-                    }
-
-                });
-            });
-
-
-            var originHeightProdutMaker = $('#product-maker').height();
-
-            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-                $('#product-maker').height(originHeightProdutMaker);
-                fixProductMakeHeight();
-            });
-
-        });
-
-        activeTabFiles = function (e) {
-            $('.nav-tabs a[href="#files-panel"]').tab('show');
-            return false;
-        }
-
-        fixProductMakeHeight = function () {
-            if ($('#product-main').height() > $('#product-maker').height()) {
-                $('#product-maker').height($('#product-main').height());
-            }
-        }
-
-
-        $(window).load(function () {
-            fixProductMakeHeight();
-        })
-
-    </script>
+   
 <?php $this->inlineScript()->appendScript(
     '    $(document).ready(function(){
-            newProductPage.setup();
+            //newProductPage.setup();
             PartialJson.setup();
+            ProductDetailCarousel.setup();
         });
     ');
