--- a/application/modules/default/views/scripts/explore/partials/product.phtml
+++ b/application/modules/default/views/scripts/explore/partials/product.phtml
@@ -57,9 +57,9 @@ $helperImage = new Default_View_Helper_Image();
         
         <div class="productInfo">
        <?php
-                $count_plingers = $this->product->count_plingers;
+                //$count_plingers = $this->product->count_plingers;
                 $count_comments = $this->product->count_comments;
-                echo ($count_plingers>0 ? '<span class="cntSupporters">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
+                //echo ($count_plingers>0 ? '<span class="cntSupporters">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
                 echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
                 ?>
         </div>            
