--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -55,10 +55,10 @@
 
                                 <span style="display: block; font-size: small;margin-top:10px;">
                                 <?php
-                                    $count_plingers = $this->product['count_plingers'];
+                                    //$count_plingers = $this->product['count_plingers'];
                                     $count_comments = $this->product['count_comments'];
                                     
-                                    echo ($count_plingers>0 ? '<span class="cntSupporters" style="padding-right:20px">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
+                                    //echo ($count_plingers>0 ? '<span class="cntSupporters" style="padding-right:20px">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
                                     echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
                                     
                                 ?>
