no changelog count

--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -164,7 +164,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                            </li>
                                        <?php } ?>
                                         <li><a href="#files-panel" data-toggle="tab">Files <?php  if($productFileInfos['fileCount']>0) {echo '('.$productFileInfos['fileCount'].')'; } ?></a></li>                                    
-                                       <li><a href="#updates-panel" data-toggle="tab">Changelogs <?php if(count($this->updates)>0) { echo '('.count($this->updates).')';} ?></a></li>
+                                       <li><a href="#updates-panel" data-toggle="tab">Changelogs</a></li>
                                         
                                    </ul>
                                </div>
