--- a/application/modules/default/views/scripts/partials/profiler.phtml
+++ b/application/modules/default/views/scripts/partials/profiler.phtml
@@ -12,7 +12,7 @@ if (Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIde
         <p>Total queries executed: <?php echo $profiler->getTotalNumQueries() ?></p>
         <p>Total elapsed time: <?php echo $profiler->getTotalElapsedSecs() ?></p>
     </div>
-    <table class='table table-bordered table-responsive'>
+    <table class='table table-bordered table-responsive' width="100%">
         <thead>
         <tr>
             <th>#</th>
@@ -28,10 +28,10 @@ if (Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIde
          * @var Zend_Db_Profiler_Query $query */
         foreach ($profiler->getQueryProfiles() as $queryNumber => $query) : ?>
             <tr>
-                <td>(<?php echo $queryNumber + 1 ?>)</td>
-                <td style="width:150px;word-wrap:break-word;"><?php echo $query->getQuery(); ?></td>
-                <td><?php print_r($query->getQueryParams()); ?></td>
-                <td><?php echo $query->getElapsedSecs(); ?> s</td>
+                <td width="10%">(<?php echo $queryNumber + 1 ?>)</td>
+                <td width="35%" style="word-wrap:break-word;"><?php echo $query->getQuery(); ?></td>
+                <td width="25%"><?php print_r($query->getQueryParams()); ?></td>
+                <td width="30%"><?php echo $query->getElapsedSecs(); ?> s</td>
             </tr>
         <?php endforeach ?>
         </tbody>
