--- a/application/modules/default/views/scripts/explore/partials/productTop.phtml
+++ b/application/modules/default/views/scripts/explore/partials/productTop.phtml
@@ -30,7 +30,7 @@
         <figure>
             <a href="<?= $this->buildProductUrl($this->product['project_id'], ''); ?>">
                
-                <img src="<?php echo $this->Image($this->product['image_small'], array('width' => 40, 'height' => 40)); ?>" style="width: 30px; height: 30px; padding-bottom: 3px"/>
+                <img src="<?php echo $this->Image($this->product['image_small'], array('width' => 40, 'height' => 40)); ?>" style="width: 30px; height: 30px; padding-top: 3px"/>
                
             </a>
         </figure>
