--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -80,10 +80,10 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 
 <?php
      $comments = $modelInfo->getLatestComments(5, $this->cat_id);
-     $donations = $modelInfo->getLatestPlings(5, $this->cat_id);
+     //$donations = $modelInfo->getLatestPlings(5, $this->cat_id);
      $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id);
      $asidehide = '';
-     if(!$this->catabout && count($comments)==0 && count($donations)==0 && count($topprods)==0 )
+     if(!$this->catabout && count($comments)==0  && count($topprods)==0 )
      {
         $asidehide = 'hide';
      }
